--- a/src/app/modules/news-center/pages/news-detail-page/news-detail-page.component.html
+++ b/src/app/modules/news-center/pages/news-detail-page/news-detail-page.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="banner">
-    <h1 class="d-flex justify-content-center align-items-center banner__title">最新消息</h1>
+    <h1 class="p-10 d-flex align-items-center banner__title">最新消息</h1>
     <hr class="banner__divider m-0 border-0 bg-black-4 opacity-100">
   </div>
   <section class="p-10 px-md-50">
