--- a/src/app/modules/shared/components/menu/menu.component.html
+++ b/src/app/modules/shared/components/menu/menu.component.html
@@ -78,7 +78,7 @@
           <span class="d-flex mb-2_5">
             <p class="font-sm me-4 text-nowrap text-black-1">Email</p>
             <p class="font-sm text-nowrap text-black-1">
-              Service@Syntrontech.Com
+              service@syntrontech.com
             </p>
           </span>
           <span class="d-flex mb-5 mb-sm-0">
