fix: logo container class

--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -3,7 +3,7 @@
   class="d-flex flex-column-reverse justify-content-between bg-black-9 px-8 pt-4_5 pb-7_5 component-footer"
 >
   <div
-    class="d-flex flex-column align-items-center mt-10 component-footer__logo-container"
+    class="d-flex flex-column align-items-start mt-10 component-footer__logo-container"
   >
     <img
       src="assets/img/logo/logo_main.png"
