--- a/src/app/modules/production/components/tab-pages/cloud-tab/cloud-tab.component.html
+++ b/src/app/modules/production/components/tab-pages/cloud-tab/cloud-tab.component.html
@@ -8,16 +8,16 @@
 >
 </app-cover-block>
 
-<div class="block__1 block-bottom-gap">
-  <h2 class="text-center text-black-1 mb-5">SynDrive</h2>
-  <h5 class="text-center text-secondary-1 fw-normal">
+<div class="block__1">
+  <h2 class="text-black-1 mb-5">SynDrive</h2>
+  <h5 class="text-secondary-1 fw-normal">
     <span class="text-primary-2">SynDrive</span
     >雲端儲存系統是伈創開發的第一個智慧應用產品，並取得新型專利
   </h5>
-  <h5 class="text-center text-secondary-1 fw-normal">
+  <h5 class="text-secondary-1 fw-normal">
     底層採用加密技術，保障客戶資料安全；不限搭配硬體品牌，更方便進行硬體採購規劃
   </h5>
-  <h5 class="text-center text-secondary-1 fw-normal mb-5">
+  <h5 class="text-secondary-1 fw-normal mb-5">
     提供水平擴充技術，可透過不停機之水平擴充特性，善用所有資源，並達到備份、備援之目的
   </h5>
 </div>
@@ -40,4 +40,4 @@
   </div>
   <div class="img position-absolute"></div>
 </div>
-<app-after-img-word-block class="block-bottom-gap" [data]="this.infoCard"></app-after-img-word-block>
+<app-after-img-word-block class="block-bottom-gap mt-50" [data]="this.infoCard"></app-after-img-word-block>
