--- a/src/app/modules/production/components/tab-pages/cloud-tab/cloud-tab.component.scss
+++ b/src/app/modules/production/components/tab-pages/cloud-tab/cloud-tab.component.scss
@@ -4,6 +4,7 @@
 .block {
   &__1 {
     padding: 0 40px;
+    margin-bottom: 70px;
     @include generateStyleByMaxBreakpoint("md") {
       flex-direction: column;
       li {
@@ -38,7 +39,7 @@
     }
   }
   &__2 {
-    padding: 0 120px;
+    padding: 0 40px;
     @include generateStyleByMaxBreakpoint("md") {
       padding: 0 20px;
     }
@@ -46,7 +47,7 @@
   &__3 {
     padding-top: 60px;
     width: 100%;
-    height: 660px;
+    height: 670px;
     background-color: map-get($black-light, 9 );
     @include generateStyleByMaxBreakpoint("md") {
       height: 500px;
