--- a/src/app/modules/shared/components/footer/footer.component.scss
+++ b/src/app/modules/shared/components/footer/footer.component.scss
@@ -55,7 +55,7 @@
 
   &__text-container {
     @media (min-width: 700px) {
-      justify-content: start !important;
+      justify-content: flex-start !important;
     }
   }
 
