--- a/src/app/modules/production/components/blocks/afterImage-img-block/afterImage-img-block.component.scss
+++ b/src/app/modules/production/components/blocks/afterImage-img-block/afterImage-img-block.component.scss
@@ -144,7 +144,7 @@
     ul {
       display: flex;
       flex-direction: column;
-      align-items: start;
+      align-items: flex-start;
     margin: 0 20px;
     }
   };
