cloud-tab: correct spelling

--- a/src/app/modules/production/components/tab-pages/cloud-tab/cloud-tab.component.html
+++ b/src/app/modules/production/components/tab-pages/cloud-tab/cloud-tab.component.html
@@ -3,15 +3,15 @@
   [imgUrl]="this.coverImg"
   title="雲端儲存"
   [contentInnerHtml]="
-    'SynDrive提供公有雲、私有雲及混合雲等不同應用架構，並可使用於Ｗindows、iOS及Android等不同平台間，讓您更方便的進行資料同步、傳輸及協同編輯作業'
+    'SynDriver提供公有雲、私有雲及混合雲等不同應用架構，並可使用於Ｗindows、iOS及Android等不同平台間，讓您更方便的進行資料同步、傳輸及協同編輯作業'
   "
 >
 </app-cover-block>
 
 <div class="block__1">
-  <h2 class="text-black-1 mb-5">SynDrive</h2>
+  <h2 class="text-black-1 mb-5">SynDriver</h2>
   <h5 class="text-secondary-1 fw-normal">
-    <span class="text-primary-2">SynDrive</span
+    <span class="text-primary-2">SynDriver</span
     >雲端儲存系統是伈創開發的第一個智慧應用產品，並取得新型專利
   </h5>
   <h5 class="text-secondary-1 fw-normal">
