--- a/src/app/modules/production/components/blocks/after-img-word-block/after-img-word-block.component.html
+++ b/src/app/modules/production/components/blocks/after-img-word-block/after-img-word-block.component.html
@@ -41,7 +41,7 @@
       </div>
       <div
         *ngIf="this.data?.content"
-        class="img img__5 mb-4 d-sm-none d-block align-self-center"
+        class="img img__5 mb-4 d-sm-none d-block align-self-center w-100"
         [style.backgroundImage]="'url(' + this.img + ')'"
       ></div>
 
