fix img for left img issue

--- a/src/app/modules/production/components/blocks/after-img-word-block/after-img-word-block.component.html
+++ b/src/app/modules/production/components/blocks/after-img-word-block/after-img-word-block.component.html
@@ -1,4 +1,4 @@
-<div class="imgＦ overflow-hidden d-none d-md-block">
+<div class="img__1 overflow-hidden d-none d-md-block">
   <div
     class="img img-afterImage mb-4"
     [style.backgroundImage]="'url(' + this.img + ')'"
