cloud-tab: text start from left

--- a/src/app/modules/production/components/cards/icon-card/icon-card.component.html
+++ b/src/app/modules/production/components/cards/icon-card/icon-card.component.html
@@ -2,4 +2,4 @@
     <em [innerHTML]="this.card?.svg"></em>
   </div>
   <h4 class="mb-2_5">{{this.card?.title}}</h4>
-  <h6 class="text-center">{{this.card?.content}}</h6>
+  <h6>{{this.card?.content}}</h6>
