--- a/src/app/modules/production/components/tab-pages/cloud-tab/cloud-tab.component.html
+++ b/src/app/modules/production/components/tab-pages/cloud-tab/cloud-tab.component.html
@@ -32,7 +32,7 @@
 <div #tBgWords class="w-100 animation-bg-words"></div>
 
 <div class="block__3 position-relative block-bottom-gap bt-17_5">
-  <div class="d-flex flex-column align-items-center mb-17_5">
+  <div class="d-flex flex-column align-items-start mb-17_5">
     <h2 class="mb-5">條條大路通雲端</h2>
     <h4>
       辦公室和私人使用的電腦、平板和智慧型手機，能同時存取最新版本文件和檔案
