--- a/src/app/modules/production/components/tab-pages/cloud-tab/cloud-tab.component.scss
+++ b/src/app/modules/production/components/tab-pages/cloud-tab/cloud-tab.component.scss
@@ -49,23 +49,33 @@
     width: 100%;
     height: 670px;
     background-color: map-get($black-light, 9 );
+    &>div {
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 830px;
+    }
     @include generateStyleByMaxBreakpoint("md") {
       height: 500px;
+      div {
+        width: 555px;
+      }
     }
     @include generateStyleByMaxBreakpoint("sm") {
       height: 340px;
+      div {
+        width: 320px;
+      }
       h2 {
         font-size: 1.5rem !important;
         font-weight: 500 !important;
       }
       h4 {
-        text-align: center;
         font-size: 1rem !important;
         font-weight: 400 !important;
       }
     }
     h4 {
-      padding: 0 20px;
       font-weight: 400 !important;
       color: map-get($secondary-light, 1 )
     }
