fix: home page product card dns text

--- a/src/app/modules/common/components/product-card/product-card.component.html
+++ b/src/app/modules/common/components/product-card/product-card.component.html
@@ -19,7 +19,7 @@
          [ngSwitch]="type">
         <ng-container *ngSwitchCase="'healthcare'">以「人」為主軸的系統，評估未來可能發生風險，與後勤照護者及醫療團隊建立一套彼此溝通、紀錄照護、用藥的共通平台</ng-container>
         <ng-container *ngSwitchCase="'pill'">系統從藥品進入庫存到最終病人使用，全程都有追蹤機制，還可以與院內其他系統整合，提高工作效率，隆低人力成本</ng-container>
-        <ng-container *ngSwitchCase="'dns'">廣泛應用於醫院掛號批價櫃檯、檢驗室、藥局領藥政府機關及銀行的服務叫號等不同場景</ng-container>
+        <ng-container *ngSwitchCase="'dns'">廣泛應用於醫院掛號批價櫃檯、檢驗室、藥局領藥、政府機關及銀行的服務叫號等不同場景</ng-container>
         <ng-container *ngSwitchCase="'backup'">提供公有雲、私有雲及混合雲等不同應用架構，並可用於多種不同平台，更方便的進行資料同步、傳輸及協同編輯作業</ng-container>
       </p>
     </div>
