--- a/src/app/modules/shared/components/banner-block/banner-block.component.html
+++ b/src/app/modules/shared/components/banner-block/banner-block.component.html
@@ -2,6 +2,6 @@
 <div class="cover__des d-flex flex-column justify-content-center bg-black-9 position-relative">
   <img src="assets/img/illustration/molecular_chain_a.svg" alt="illustration-chain-a"
   class="position-absolute d-sm-block">
-  <h1 class="text-secondary-1 ">{{this.title}}</h1>
+  <h1 class="text-secondary-1 text-nowrap">{{this.title}}</h1>
   <p class="text-secondary-1 mt-4" [innerHTML]="this.contentInnerHtml"></p>
 </div>
