--- a/src/app/modules/shared/components/footer/footer.component.html
+++ b/src/app/modules/shared/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <hr class="divider-colored border-0 m-0 opacity-100" />
 <footer
-  class="d-flex flex-column-reverse justify-content-between bg-black-9 px-8 pt-4_5 pb-7_5 component-footer"
+  class="d-flex flex-column-reverse justify-content-between bg-black-9 px-8 pt-4_5 pb-7_5 component-footer position-relative"
 >
   <div
     class="d-flex flex-column align-items-start mt-10 component-footer__logo-container"
